--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 
-    body {background-color:  white;
+   @viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
+
+body {background-color:  white;
          color:#191970;
          font-family: 'Times New Roman', Times, serif;
          margin: 0;
