--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@
   zoom: 1.0 ;
 }
 
-body {background-color:  white;
-         color:#191970;
-         font-family: 'Times New Roman', Times, serif;
-         margin: 0;
-         
-         }
+body {
+   background-color:  white;
+   color:#191970;
+   font-family: 'Times New Roman', Times, serif;
+   margin: 0;
+   position: fixed;   
+}
 
          header {
             background-color: rgb(255, 255, 255);
