--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h2 {
 }
 p {
   font-size: .90em;
-  text-indent: 3em;
+/*   text-indent: 3em; */
  /* color:  black;*/
   font-family: courier;
   font-size: 160%;
