--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body {
   text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
   
 }
+
+.mainPageImg img{
+  height: auto !important;
+  width: 100% !important;
+}
 h2 {
   background-color: grey;
   color: blue;
