--- a/style.css
+++ b/style.css
@@ -33,9 +33,18 @@ body {
 }
 
 .mainPageImg img{
-  height: auto !important;
+  height: 600px !important;
   width: 100% !important;
 }
+
+@media screen and (max-width: 992px) {
+  .mainPageImg img{
+    height: 200px !important;
+    width: 100% !important;
+  }
+}
+
+
 h2 {
   background-color: grey;
   color: blue;
