--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ body {
     height: 400px !important;
     width: 100% !important;
   }
+  .mainPageImg{
+    height: 400px !important;
+  }
 }
 
 
